--- a/SupportFunctions/SupportFunctions/SupportFunctions.csproj
+++ b/SupportFunctions/SupportFunctions/SupportFunctions.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Model\IValueComparison.cs" />
     <Compile Include="Model\MeasurementComparison.cs" />
     <Compile Include="Model\RowColumnComparer.cs" />
+    <Compile Include="ReflectionFunctions.cs" />
+    <Compile Include="Utilities\Requires.cs" />
     <Compile Include="Utilities\NumericFunctions.cs" />
     <Compile Include="Model\RegistryWrapper.cs" />
     <Compile Include="Utilities\StringFunctions.cs" />
