--- a/SupportFunctions/SupportFunctions/SupportFunctions.csproj
+++ b/SupportFunctions/SupportFunctions/SupportFunctions.csproj
@@ -5,7 +5,7 @@
     <LangVersion>8.0</LangVersion>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysysMode>AllEnabledByDefault</AnalysysMode>
-    <Version>3.0.0-beta-2</Version>
+    <Version>3.0.0-beta-3</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Support functions such as Echo, Times Series, Dictionary Library objects, date functions for FitNesse/FitSharp</Description>
     <Copyright>Copyright © Rik Essenius 2015-2021</Copyright>
@@ -14,6 +14,7 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ProjectGuId>{207EB2BB-C952-486D-8C8B-C42BE17A3602}</ProjectGuId>
+    <DocumentationFile>SupportFunctions.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
