--- a/SupportFunctions/SupportFunctionsTest/SupportFunctionsTest.csproj
+++ b/SupportFunctions/SupportFunctionsTest/SupportFunctionsTest.csproj
@@ -5,7 +5,7 @@
     <LangVersion>8.0</LangVersion>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysysMode>AllEnabledByDefault</AnalysysMode>
-    <Version>3.0.0-beta-3</Version>
+    <Version>3.0.0-beta-4</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Test project for SupportFunctions fixture</Description>
     <Copyright>Copyright © Rik Essenius 2015-2021</Copyright>
@@ -30,6 +30,15 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="TestData\Dbl02_0.1Tol_NoFixed_Application_Variables_OUTFLOW1.SP_ExpectedRaw.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\SimpleActualMissing.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\SimpleActualSurplus.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\SimpleExpected.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="TestData\StreamData1.csv">
