--- a/SupportFunctions/SupportFunctions/SupportFunctions.csproj
+++ b/SupportFunctions/SupportFunctions/SupportFunctions.csproj
@@ -26,7 +26,7 @@
     </AssemblyAttribute>
   </ItemGroup>
 
-  <ItemGroup Condition =" '$(TargetFramework)' == 'net6.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
     <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-beta.920" />
   </ItemGroup>
 
@@ -38,5 +38,11 @@
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
 
   </ItemGroup>
+
+    <ItemGroup>
+      <None Update="config.xml">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
 
 </Project>
