--- a/SupportFunctions/SupportFunctions/SupportFunctions.csproj
+++ b/SupportFunctions/SupportFunctions/SupportFunctions.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net6.0;net461</TargetFrameworks>
+    <TargetFrameworks>net8.0;net461</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <AnalysysMode>AllEnabledByDefault</AnalysysMode>
-    <Version>3.0.0-beta-9</Version>
+    <Version>3.0.0-beta-10</Version>
     <Authors>Rik Essenius</Authors>
     <Description>Support functions such as Echo, Times Series, Dictionary Library objects, date functions for FitNesse/FitSharp</Description>
     <Copyright>Copyright © Rik Essenius 2015-2024</Copyright>
@@ -15,6 +15,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <ProjectGuId>{207EB2BB-C952-486D-8C8B-C42BE17A3602}</ProjectGuId>
     <DocumentationFile>SupportFunctions.xml</DocumentationFile>
+    <PackageProjectUrl>https://github.com/essenius/FitNesseFitSharpSupportFunctions/wiki</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageTags>fitnesse;test-automation</PackageTags>
+    <PackageReleaseNotes>Upgraded .NET to 8.0</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -26,7 +30,7 @@
     </AssemblyAttribute>
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net8.0' ">
     <PackageReference Include="LiveChartsCore.SkiaSharpView" Version="2.0.0-rc2" />
   </ItemGroup>
 
@@ -37,6 +41,13 @@
     <Reference Include="System.Web.Extensions" />
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
 
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
